--- a/src/main/resources/templates/fragments/bottominc.html
+++ b/src/main/resources/templates/fragments/bottominc.html
@@ -18,15 +18,33 @@
 
 
 
-
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+            $('[data-toggle="popover"]').popover()
+        });
+    </script>
 </head>
-<body>
+<body th:fragment="body">
 <script src="http://cdn.jsdelivr.net/webjars/jquery/3.2.1/jquery.min.js"
         th:src="@{/webjars/jquery/3.2.1/jquery.min.js}"></script>
 <!--<script src="http://cdn.jsdelivr.net/webjars/tether/1.4.0/js/tether.min.js"-->
-<!--th:src="@{/webjars/tether/1.4.0/js/tether.min.js}"></script>-->
+        <!--th:src="@{/webjars/tether/1.4.0/js/tether.min.js}"></script>-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="http://cdn.jsdelivr.net/webjars/bootstrap/4.0.0-beta/js/bootstrap.min.js"
         th:src="@{/webjars/bootstrap/4.0.0-beta/js/bootstrap.min.js}"></script>
+
+<!-- Initialize Bootstrap functionality -->
+<script>
+    // Initialize tooltip component
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+
+    // Initialize popover component
+    $(function () {
+        $('[data-toggle="popover"]').popover()
+    })
+</script>
 </body>
 </html>
