--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -6,8 +6,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
 
     <!-- Bootstrap CSS -->
-    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/4.0.0-alpha.6-1/css/bootstrap.min.css"
-          th:href="@{/webjars/bootstrap/4.0.0-alpha.6-1/css/bootstrap.min.css}"
+    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+          th:href="@{/webjars/bootstrap/4.0.0-beta/css/bootstrap.min.css}"
           rel="stylesheet" media="screen" />
     <link href="../../static/css/colors.css"
           th:href="@{css/colors.css}" rel="stylesheet"/>
@@ -16,17 +16,11 @@
     <link href="../../static/css/font-awesome.min.css"
           th:href="@{css/font-awesome.min.css}" rel="stylesheet" type="text/css"/>
 
-    <script src="http://cdn.jsdelivr.net/webjars/jquery/3.2.1/jquery.min.js"
-            th:src="@{/webjars/jquery/3.2.1/jquery.min.js}"></script>
-    <script src="http://cdn.jsdelivr.net/webjars/tether/1.4.0/js/tether.min.js"
-            th:src="@{/webjars/tether/1.4.0/js/tether.min.js}"></script>
-    <script src="http://cdn.jsdelivr.net/webjars/bootstrap/4.0.0-alpha.6-1/js/bootstrap.min.js"
-            th:src="@{/webjars/bootstrap/4.0.0-alpha.6-1/js/bootstrap.min.js}"></script>
 </head>
 <body>
 <!-- Sidebar -->
 <div class="row" th:fragment="sidebar">
-    <nav class="col-sm-3 col-md-2 hidden-xs-down sidebar">
+    <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
         <ul class="nav nav-pills flex-column">
             <li class="nav-item">
                 <a class="nav-link" href="index.html" th:href="@{/}" th:classappend="|${#httpServletRequest.requestURI=='/'? 'active': ''} ${#httpServletRequest.requestURI!='/'? 'text-muted' : ''}|"><i class="fa fa-dashboard fa-fw"></i> Widok główny</a>
@@ -50,4 +44,11 @@
     </nav>
 </div>
 </body>
+<script src="http://cdn.jsdelivr.net/webjars/jquery/3.2.1/jquery.min.js"
+        th:src="@{/webjars/jquery/3.2.1/jquery.min.js}"></script>
+<!--<script src="http://cdn.jsdelivr.net/webjars/tether/1.4.0/js/tether.min.js"-->
+<!--th:src="@{/webjars/tether/1.4.0/js/tether.min.js}"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="http://cdn.jsdelivr.net/webjars/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+        th:src="@{/webjars/bootstrap/4.0.0-beta/js/bootstrap.min.js}"></script>
 </html>
