--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -68,3 +68,11 @@ h1 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
+
+.card{
+  margin-bottom: 2rem;
+}
+
+.progress{
+  margin-bottom: 1rem;
+}
