--- a/src/main/resources/templates/fragments/headinc.html
+++ b/src/main/resources/templates/fragments/headinc.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
 
     <!-- Bootstrap CSS -->
-    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/4.0.0-beta/css/bootstrap.css"
           th:href="@{/webjars/bootstrap/4.0.0-beta/css/bootstrap.min.css}"
           rel="stylesheet" media="screen" />
     <link href="../../static/css/colors.css"
