--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -29,13 +29,13 @@
                 <ul class="navbar-nav mr-auto">
                 </ul>
 
-                <div class="dropdown">
+                <div class="dropdown d-flex justify-content-center">
                     <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Profil
                     </button>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Ustawienia</a>
-                        <div class="dropdown-divider"></div>
+                    <div class="dropdown-menu-right dropdown-menu" aria-labelledby="dropdownMenuButton" style="left: auto;right: 0; top: 102%;">
+                        <!--<a class="dropdown-item" href="#">Ustawienia</a>-->
+                        <!--<div class="dropdown-divider"></div>-->
                         <a class="dropdown-item" href="#">Wyloguj</a>
                     </div>
                 </div>
