--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -36,7 +36,7 @@
                     <div class="dropdown-menu-right dropdown-menu" aria-labelledby="dropdownMenuButton" style="left: auto;right: 0; top: 102%;">
                         <!--<a class="dropdown-item" href="#">Ustawienia</a>-->
                         <!--<div class="dropdown-divider"></div>-->
-                        <a class="dropdown-item" href="#">Wyloguj</a>
+                        <a class="dropdown-item" href="#" th:href="@{/logout}">Wyloguj</a>
                     </div>
                 </div>
             </div>
