DAO Authorization added

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
                 <form th:action="@{/login}" method="post">
                     <div class="form-group">
                         <!--<label for="loginInput">Login</label>-->
-                        <input type="text" class="form-control" id="loginInput" aria-describedby="emailHelp" placeholder="Podaj login" name="username"/>
+                        <input type="text" class="form-control" id="loginInput" aria-describedby="emailHelp" placeholder="Podaj login" name="username" required="required" autofocus="autofocus"/>
                         <!--<small th:if="${param.error}" class="text-danger">Podaj prawidłowy login</small>-->
                     </div>
                     <div class="form-group">
