--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <div class="container-fluid">
     <div class="row"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
-            <h1><i class="fa fa-dashboard fa-fw"></i>&nbsp;Widok Główny</h1>
+            <h1><i class="fa fa-dashboard fa-fw"></i>&nbsp;Widok Główny<th:block th:text="' '+${username}+' ID: '+${userId}"></th:block></h1>
             <div class="row">
 
                 <div class="col-lg-3 col-md-6" th:each="eval : ${evals}">
