--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,22 +12,21 @@
 
         <div class="card" style="margin-top: 25%">
             <div class="card-header text-center">
-                <p class="h4">Zaloguj się</p>
+                <p class="h4">Zarejestruj się</p>
             </div>
             <div class="card-body">
-                <form th:action="@{/login}" method="post">
+                <form th:action="@{/registration}" th:object="${user}" method="post">
+                    <input type="hidden" th:field="*{id}"/>
                     <div class="form-group">
                         <!--<label for="loginInput">Login</label>-->
-                        <input type="text" class="form-control" id="loginInput" aria-describedby="emailHelp" placeholder="Podaj login" name="username" required="required" autofocus="autofocus"/>
+                        <input type="text" class="form-control" id="loginInput" placeholder="Podaj login" th:field="*{username}" required="required" autofocus="autofocus"/>
                         <!--<small th:if="${param.error}" class="text-danger">Podaj prawidłowy login</small>-->
                     </div>
                     <div class="form-group">
                         <!--<label for="inputPassword1">Password</label>-->
-                        <input type="password" class="form-control" id="inputPassword1" placeholder="Hasło" name="password"/>
+                        <input type="password" class="form-control" id="inputPassword1" placeholder="Hasło" required="required" th:field="*{password}"/>
                         <!--<small th:if="${param.error}" class="text-danger">Podaj prawidłowe hasło</small>-->
                     </div>
-                    <small th:if="${param.logout}" class="text-success">wylogowano</small>
-                    <small><a th:href="@{/register}">Nie masz konta? Zarejestruj się.</a></small>
                     <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
                 </form>
             </div>
