--- a/src/main/resources/templates/evals.html
+++ b/src/main/resources/templates/evals.html
@@ -74,13 +74,19 @@
                                 </select>
                             </div>
                             <div class="row">
-                                <div class="col-6">
+                                <div class="col-12">
                                     <label th:attr="for='date_'+${evaluation.id}">Data zaliczenia</label>
                                     <input class="form-control" type="date" th:attr="id='date_'+${evaluation.id}" th:field="*{dzien}"/>
                                 </div>
+                            </div>
+                            <div class="row">
                                 <div class="col-6">
                                     <label th:attr="for='hour_'+${evaluation.id}">Godzina zaliczenia</label>
                                     <input class="form-control" type="time" th:attr="id='hour_'+${evaluation.id}" th:field="*{hour}"/>
+                                </div>
+                                <div class="col-6">
+                                    <label th:attr="for='endhour_'+${evaluation.id}">Godzina zaliczenia</label>
+                                    <input class="form-control" type="time" th:attr="id='endhour_'+${evaluation.id}" th:field="*{endHour}"/>
                                 </div>
                             </div>
                         </div>
