--- a/src/main/resources/templates/noteform.html
+++ b/src/main/resources/templates/noteform.html
@@ -13,7 +13,7 @@
             <div class="row" >
                 <form th:object="${note}" th:action="@{/note}" method="post">
                     <div class="container">
-                        <div class="col-12">
+                        <div class="col-12" style="width: 50rem">
                             <input type="hidden" th:field="*{id}"/>
                             <input type="hidden" th:field="*{lesson}"/>
                             <input type="hidden" th:field="*{date}"/>
