--- a/src/main/resources/templates/subjects.html
+++ b/src/main/resources/templates/subjects.html
@@ -132,6 +132,7 @@
                     <form th:object="${subject}" th:action="@{/subject}" method="post">
                         <div class="modal-body">
                             <input type="hidden" th:field="*{id}"/>
+                            <input type="hidden" th:value="${userId}" th:attr="name='user'"/>
                             <div class="form-group">
                                 <label th:attr="for='subject-name'+${subject.id}">Nazwa przedmiotu</label>
                                 <input class="form-control" type="text" value="Nazwa przemiotu" th:field="*{name}"/>
