--- a/src/main/resources/templates/teachers.html
+++ b/src/main/resources/templates/teachers.html
@@ -50,6 +50,7 @@
                     <form th:object="${teacher}" th:action="@{/teacher}" method="post">
                         <div class="modal-body">
                             <input type="hidden" th:field="*{id}"/>
+                            <input type="hidden" th:value="${userId}" th:attr="name='user'"/>
                             <div class="row">
                                 <div class="col-6">
                                     <label th:attr="for='number'">Imię</label>
