--- a/src/main/resources/templates/roomform.html
+++ b/src/main/resources/templates/roomform.html
@@ -15,7 +15,7 @@
                     <div class="container-fluid">
                         <div class="col-12">
                             <input type="hidden" th:field="*{id}"/>
-                            <input type="hidden" th:value="${userId}" th:attr="name='user'"/>
+                            <input type="hidden" th:field="*{user.id}"/>
                             <div class="form-group row">
                                 <div class="col-6">
                                     <label th:attr="for='number'">Numer pokoju</label>
