--- a/src/main/resources/templates/subjectform.html
+++ b/src/main/resources/templates/subjectform.html
@@ -15,7 +15,7 @@
                     <div class="container-fluid">
                         <div class="col-12">
                             <input type="hidden" th:field="*{id}"/>
-                            <input type="hidden" th:value="${userId}" th:attr="name='user'"/>
+                            <input type="hidden" th:field="*{user.id}"/>
                             <div class="form-group">
                                 <label th:attr="for='subject-name'+${subject.id}">Nazwa przedmiotu</label>
                                 <input class="form-control" type="text" value="Nazwa przemiotu" th:field="*{name}"/>
