--- a/src/main/resources/templates/subjectform.html
+++ b/src/main/resources/templates/subjectform.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Student Timetable</title>
     <!--/*/ <th:block th:include="fragments/headinc :: head"></th:block> /*/-->
@@ -15,7 +15,11 @@
                     <div class="container-fluid">
                         <div class="col-12">
                             <input type="hidden" th:field="*{id}"/>
-                            <input type="hidden" th:field="*{user.id}"/>
+                            <input type="hidden" th:field="*{user.id}" sec:authorize="hasAuthority('USER')"/>
+                            <div class="form-group" sec:authorize="hasAuthority('ADMIN')">
+                                <label for="userid">ID Użytkownika</label>
+                                <input id="userid" sec:authorize="hasAuthority('USER')" type="number" th:field="*{id}" required="required"/>
+                            </div>
                             <div class="form-group">
                                 <label th:attr="for='subject-name'+${subject.id}">Nazwa przedmiotu</label>
                                 <input class="form-control" type="text" value="Nazwa przemiotu" th:field="*{name}"/>
